<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlanIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="empty_radio">Vous devez selectionner un choix </string>
    <string name="error_msg_all_fields">Tous les champs sont requis</string>
    <string name="error_msg_some_fields">Vous avez oublié des champs obligatoires</string>



    <!-- hamburger -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!-- END hamburger -->

    <!-- List Event -->
    <string name="addevent">AJOUTER UN ÉVÉNEMENT</string>
    <string name="change_event">Modifier l\'événement</string>
    <string name="delete_event">Supprimer l\'événement</string>
    <!-- END List Event -->

    <!--  Event -->
    <string name="guests"> inscrits</string>
    <string name="expenses">Dépenses</string>
    <string name="inflow">Apports</string>
    <string name="income">Apports</string>
    <string name="cost">Dépenses</string>
    <string name="total">Total</string>
    <string name="addmodule">Ajouter un module</string>
    <string name="empty_event">Il n\'y a aucun événement pour le moment</string>
    <!-- END Event -->

    <!-- module guest -->
    <string name="name_module_guest">Gestion des invitations</string>
    <string name="paying">Événement payant</string>
    <string name="type_guest">Ajouter un type d\'invité</string>
    <string name="payment_mean">Ajouter un moyen de paiement</string>
    <string name="add_guest">Ajouter un invité</string>
    <string name="empty_cat">Il n\'y a aucun invité de type </string>
    <string name="suscribe">Mode inscription</string>
    <string name="invite">Mode invitation</string>
    <string name="nb_mx_guest">Nombre maximum d\'invités</string>
    <string name="empty_guest">Il n\'y a aucun type d\'invité pour le moment</string>


        <!-- modif guest -->
        <string name="changeguest">MODIFIER UN INVITÉ</string>
        <string name="confirmed_waiting">En attente de réponse</string>
        <string name="confirmed_yes">A accepté</string>
        <string name="confirmed_no">A décliné</string>
        <string name="payed_yes">A payé</string>
        <string name="payed_no">En attente de paiement</string>
        <string name="error_email">Veuillez entrer un email valide</string>
        <!-- END modif guest -->
        <!-- send mail  -->
        <string name="mail_sent">Mail envoyé</string>
        <string name="question_mail1">Envoyer l\'invitation?</string>
        <string name="question_mail2">Envoyer l\'invitation une nouvelle fois?</string>
        <!-- END send mail -->

        <!-- add guest -->
        <string name="addguest">AJOUTER UN INVITÉ</string>
        <string name="spinner_prompt">Choisissez un type d\'invité</string>
        <!-- end add guest -->

        <!-- add typeguest -->
        <string name="addtypeguest">AJOUTER UN TYPE D\'INVITÉ</string>
        <string name="label_typeguest">Nom du type d\'invité</string>
        <string name="message"> Message</string>
        <string name="message_hint">(qui sera dans le mail d\'invitation)</string>
        <string name="price_typeguest"> Prix </string>
        <string name="change_typeguest">MODIFIER OU SUPPRIMER LE TYPE</string>
        <!-- end add typeguest -->

        <!-- get URL -->
        <string name="get_url">Générer l\'URL d\'inscription</string>
        <string name="copy">URL copié dans le presse papier</string>
        <!-- end get URL-->
    <!-- END module guest -->



    <!-- BUDGET -->
    <string name="name_module_budget">Gestion du budget</string>
    <string name="add_expense">Ajouter une dépense</string>
    <string name="change_expense">Modifier une dépense</string>
    <string name="add_infow">Ajouter un apport</string>
    <string name="change_inflow">Modifier un apport</string>
    <string name="add_type_expense">Ajouter une catégorie de dépense</string>
    <string name="hint_unit_money">en €</string>
    <string name="empty_list_budget">Il n\'y a aucun article de ce type</string>
    <string name="max_budget">Budget maximum</string>
    <string name="base">Apport personnel</string>
    <string name="empty_budget">Il n\'y a aucune catégorie de dépense pour le moment</string>

    <!-- add expense -->
        <string name="label_expense">Nom</string>
        <string name="unit">Unité</string>
        <string name="unit_hint">Litres, Grammes, Boites, ...</string>
        <string name="unit_price">Prix unitaire</string>
        <string name="stock">Quantité en stock</string>
        <string name="quantity">Quantité totale</string>
        <string name="consummate">Quantité consommée</string>
        <!-- end add expense -->
        <!-- add inflow -->
        <string name="label_inflow">Nom</string>
        <string name="amount">Montant</string>
        <!-- end add inflow -->
        <!-- add type expense-->
        <string name="label_type_expense">Nom</string>
        <!-- end add type expense -->

    <!-- END BUDGET -->

    <!-- MODULE TO-DO -->
    <string name="name_module_todo">Gestion des tâches</string>
    <string name="add_task">Ajouter une tâche</string>
    <string name="modify_task">Modifier une tâche</string>
    <string name="delete_task">Supprimer une tâche</string>
    <string name="add_cat_task">Ajouter une liste</string>
    <string name="task">Tâche</string>
    <string name="category">Liste</string>
    <string name="no_infos">Aucune information requise</string>
    <string name="change_cat">Modifier une liste</string>
    <string name="empty_todo">Il n\'y a aucune liste de tâche pour le moment</string>
    <!-- END MODULE TO-DO -->

    <!-- MODULE PLACE -->
    <string name="name_module_place">Gestion du lieu</string>
    <string name="place_name">Nom</string>
    <string name="place_adress">Adresse: </string>
    <string name="place_distance">Distance: </string>
    <string name="place_price">Prix: </string>
    <string name="place_capacity">Capacité: </string>
    <string name="place_website">Site web: </string>
    <string name="place_remark">Remarques: </string>
    <string name="phone">Téléphone: </string>
    <string name="place_state">État: </string>
    <string name="place_image">Image</string>
    <string name="add_place">Ajouter un lieu</string>
    <string name="delete_place">Supprimer ce lieu</string>
    <string name="change_place">Modifier ce lieu</string>
    <string name="max_capacity">Capacité maximum</string>
    <string name="max_price">Prix maximum</string>
    <string name="max_time">Temps de trajet maximum</string>
    <string-array name="state_logistic">
        <item>Refusé</item>
        <item>Choisi</item>
        <item>Contacté</item>
        <item>A contacter</item>
    </string-array>
    <string name="mandatory">Champ obligatoire</string>
    <string name="googlemaps">Voir sur Google Maps</string>
    <string name="contract">Télécharger le contrat</string>
    <string name="empty_place">Il n\'y a aucun lieu pour le moment</string>
    <!-- END MODULE PLACE -->

    <!-- MODULE TRANSPORT -->
    <string name="name_module_transport">Gestion de transport</string>
    <string name="add_transport">Ajouter une compagnie</string>
    <string name="delete_transport">Supprimer une compagnie</string>
    <string name="change_transport">Modifier une compagnie</string>
    <string name="transport_name">Nom</string>
    <string name="transport_tel">Téléphone: </string>
    <string name="transport_price">Prix</string>
    <string name="transport_capacity">Capacité: </string>
    <string name="transport_website">Site web: </string>
    <string name="empty_transport">Il n\'y a aucune compagnie de transport pour le moment</string>
    <!--  END MODULE TRANSPORT -->

    <!-- AIDE -->
    <string name="title_guest_help">2 modes du module \"Gestion des invités \"</string>
    <string name="guest_help">Il y a deux modes: \"Inscription\" qui vous fournit l\'URL d\'un formulaire d\'inscription à diffuser comme vous le souhaitez
    \"Invitation\" où vous pouvez ajouter vos invités un par un et envoyer le mail associé au type d\'invité automatiquement</string>
    <string name="title_add_module_help">Ajouter un module</string>
    <string name="add_module_help">Vous pouvez ajouter le module de votre choix en touchant l\'icone. Un module ne peux être installé qu\'une seule fois.</string>
    <string name="title_supp_cat_help">Supprimer ou modifier une catégorie</string>
    <string name="supp_cat_help">Dans les modules \"Gestion des invités\", \"Gestion du budget\" et \"Gestion des tâches\" vous devez créer des catégories. Pour les modifier ou les supprimer, appuyez longtemps sur le nom de la catégorie.</string>
    <string name="title_change_delete_event_help">Modifier ou supprimer un événement</string>
    <string name="change_delete_event_help">Les boutons de modifications et de suppression d\'événements sont dans le menu en haut à droite, quand vous vous trouvez sur un événement.</string>
    <string name="title_infos_help">Informations d\'un événement</string>
    <string name="infos_help">Sur la page d\'un événement, vous avez différentes informations : le nombre de dodos restant, le nombre de participants (il faut que le module \"Gestion des invités\" soit activé, ce sont les invités ayant accepté), total des dépenses et total des apports (il faut que le module \"Gestion du budget\" soit activé)</string>
    <string name="title_budget_help">Module \"Gestion du budget\"</string>
    <string name="budget_help">A la création du module, vous trouverez dans les apports votre apport de base (si spécifié) et l\'argent reçu par les participants ayant payé (si le module \"Gestion des invités\" est activé)</string>
    <string name="title_logistic_help">Modules \"Gestion du lieu\" et \"Gestion du transport\"</string>
    <string name="logistic_help">Vous ne pouvez choisir qu\'un seul lieu ou compagnie de transport à la fois. Si vous choisissez de télécharger un contrat, vous le retrouverez dans vos téléchargements.</string>
    <string name="title_map_help">Module \"Gestion du lieu \" : la map</string>
    <string name="map_help"> Si l\'adresse renseignée est valide, la map se configure automatiquement. Vous pouvez ouvrir la map avec l\'application Google Maps.</string>
    <string name="title_change_module_help">Modifier ou supprimer un module</string>
    <string name="change_module_help">Touchez les icones de poubelles et de crayon autour du nom du module pour le modifier/supprimer</string>
    <string name="title_state_guest_help">Changer l\'état d\'un invité</string>
    <string name="state_guest_help">Lorsque vous modifiez un invité, déplacez le curseur de \"Confirmation\" pour passer de A décliné - A accepté - En attende de réponse</string>
    <!-- END AIDE -->

</resources>
