<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <!--  title of page -->
    <TextView
        style="@style/titlesPages"
        android:id="@+id/title"
        android:text="Aide"
        android:textAllCaps="true"
        />
    <!--  END title of page -->

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- AJOUTER UN MODULE -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_add_module_help"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/app_color"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/help_add_module"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/add_module_help"/>

        <!-- MODIFIER OU SUPPRIMER UN ÉVÉNEMENT -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_change_delete_event_help"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/app_color"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/change_event_help"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/change_delete_event_help"/>

        <!-- MODIFIER OU SUPPRIMER UN MODULE -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_change_module_help"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/app_color"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/help_transport"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/change_module_help"/>

        <!-- MODIFIER OU SUPPRIMER UNE CATÉGORIE -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_supp_cat_help"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/app_color"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/help_change_cat"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/supp_cat_help"/>

        <!-- INFOS -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_infos_help"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/app_color"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/help_infos"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/infos_help"/>

        <!-- MODULE GUEST -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_guest_help"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/guest"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/help_guest"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/guest_help"/>

        <!-- CHANGE STATE GUEST -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_state_guest_help"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/guest"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/help_change_guest"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/state_guest_help"/>

        <!-- MODULE BUDGET -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_budget_help"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/budget"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/help_budget"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/budget_help"/>

        <!-- MODULE LOGISTIC -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_logistic_help"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/transport"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/help_transport"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/logistic_help"/>

        <!-- MAPS -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_map_help"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/place"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/map_help"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/map_help"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>